# dji

./: .gitignore
dji/: CMakeLists.txt
dji/include/: carDetect.h  draw.h  illegalStop.h  mixin.h
dji/src/: carDetect.cpp  draw.cpp  illegalStop.cpp  main.cpp
dji/test/: opencvTest.cpp  templateTest.cpp  test.cpp  torchTest.cpp
illegalStop/: detect.py  mixin.py  temp.py  test.py  train.py
illegalStop/data/lineData/: test.txt  train.txt
illegalStop/output/: result.txt
